--- a/src/index.html
+++ b/src/index.html
@@ -21,9 +21,9 @@
   
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <link rel="apple-touch-icon" href="static/icons/apple-touch-icon.png">
-  <link rel="icon" href="static/icons/favicon.png">
-  <link rel="manifest" href="/manifest.json">
+  <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/ChenYFan-Tester/appstore@gh-pages/static/icons/apple-touch-icon.png">
+  <link rel="icon" href="https://cdn.jsdelivr.net/gh/ChenYFan-Tester/appstore@gh-pages/static/icons/favicon.png">
+  <link rel="manifest" href="https://cdn.jsdelivr.net/gh/ChenYFan-Tester/appstore@gh-pages/manifest.json">
   
   <!-- built styles file will be auto injected -->
 </head>
