--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <link rel="apple-touch-icon" href="https://cdn.jsdelivr.net/gh/ChenYFan-Tester/appstore@gh-pages/static/icons/apple-touch-icon.png">
   <link rel="icon" href="https://cdn.jsdelivr.net/gh/ChenYFan-Tester/appstore@gh-pages/static/icons/favicon.png">
-  <link rel="manifest" href="https://cdn.jsdelivr.net/gh/ChenYFan-Tester/appstore@gh-pages/manifest.json">
+  <link rel="manifest" href="manifest.json">
   
   <!-- built styles file will be auto injected -->
 </head>
